# platformer-game-cpp

./: CMakeLists.txt
Tools/: levelConverter.py
Tools/TiledData/: demoLevel.json  platformer.tiled-session  tileset.json
assets/: level.json  level.txt
include/: AssetManager.h  GameObjects.h  Player.h  Tile.h  config.h  gameLayer.h
src/: AssetManager.cpp  GameObjects.cpp  Player.cpp  Tile.cpp  gameLayer.cpp  main.cpp
